Updated app to display data and wired in filter dropdowns

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="assets/css/style.css"/>
     <link rel="stylesheet" href="components/navbar/navbar.css"/>
     <link rel="stylesheet" href="components/optionbar/optionbar.css"/>
-    <link rel="stylesheet" href="components/hometile/hometile.css"/>
     <link rel="stylesheet" href="components/graphbar/graphbar.css"/>
     <link rel="stylesheet" href="components/datatable/datatable.css"/>
     <link rel="stylesheet" href="sections/revenue/revenue.css"/>
@@ -47,7 +46,7 @@
           </nav>
           <optionbar></optionbar>
         </div>
-        <!--<div class="page-loader" data-ng-show="navbar.pageData.loading"><div class="throbber"></div></div>-->
+        <div class="page-loader" data-ng-show="navbar.pageData.loading"><div class="throbber"></div></div>
     </header>
 
     <section id="main">
@@ -98,9 +97,7 @@
     <!-- DIRECTIVES -->
         <script src="components/navbar/navbar.ctrl.js"></script>
         <script src="components/optionbar/optionbar.drct.js"></script>
-        <script src="components/hometile/hometile.drct.js"></script>
         <script src="components/graphbar/graphbar.drct.js"></script>
-        <script src="components/datatable/datatable.drct.js"></script>
         <script src="directives/ngEnter.drct.js"></script>
         <script src="filters/useFilter.fltr.js"></script>
         <script src="filters/percentage.fltr.js"></script>
