--- a/src/index.html
+++ b/src/index.html
@@ -98,6 +98,7 @@
         <script src="components/navbar/navbar.ctrl.js"></script>
         <script src="components/optionbar/optionbar.drct.js"></script>
         <script src="components/graphbar/graphbar.drct.js"></script>
+        <script src="components/datatable/datatable.drct.js"></script>
         <script src="directives/ngEnter.drct.js"></script>
         <script src="filters/useFilter.fltr.js"></script>
         <script src="filters/percentage.fltr.js"></script>
