--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,7 @@
     <!-- / -->
     <!-- CONTROLLERS -->
         <script src="sections/revenue/revenue.ctrl.js"></script>
+        <script src="sections/groups/groups.ctrl.js"></script>
         <script src="sections/volume/volume.ctrl.js"></script>
         <script src="sections/relationships/relationships.ctrl.js"></script>
     <!-- / -->
