--- a/src/sections/groups/groups.tpl.html
+++ b/src/sections/groups/groups.tpl.html
@@ -4,7 +4,7 @@
         <div><h2>{{revenue.total | useSummaryFilter:revenue.pageData.metricType}} <span popover-class="popover" popover-popup-delay="500" popover-placement="bottom" uib-popover="{{revenue.currentMetricPop}}" popover-trigger="'mouseenter'" class="pop" >{{revenue.pageData.optionBar.metricCurrent.name}}</span></h2></div>
         <div><h4>{{revenue.totalChange | useSummaryFilter:revenue.pageData.metricType}} {{revenue.compStr}} {{revenue.pageData.lang.changeas}} <span popover-class="popover" popover-popup-delay="500" popover-placement="bottom" uib-popover="{{revenue.pageData.lang.datepop}}" popover-trigger="'mouseenter'" class="pop" >{{revenue.totalDate}}</span></h4></div>
       </div>
-      <div class="graph-container revenue" ng-click="graphbar.barClick(data)">
+      <div class="graph-container revenue">
         <graphbar graphdata="revenue.chart.data"></graphbar>
       </div>
     </div>
