Updates to finish groups and accounts views

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="sections/revenue/revenue.css"/>
     <link rel="stylesheet" href="sections/volume/volume.css"/>
     <link rel="stylesheet" href="sections/accounts/accounts.css"/>
+    <link rel="stylesheet" href="sections/groups/groups.css"/>
     <!-- endbuild -->
 </head>
 <body data-ng-app="app" >
