Made updates to the accounts area. Updated the build.

--- a/src/index.html
+++ b/src/index.html
@@ -41,13 +41,14 @@
               <ul class="pull-right nav navbar-nav">
                   <li><a href="#!/revenue">Revenue</a></li>
                   <li><a href="#!/volume">Volume</a></li>
-                  <li><a href="#!/accounts">Accounts</a></li>
+                  <li><a href="#!/accounts">Companies</a></li>
               </ul>
             </div>
           </nav>
           <optionbar></optionbar>
-        </div>
+
         <div class="page-loader" data-ng-show="navbar.pageData.loading"><div class="throbber"></div></div>
+        </div>
     </header>
 
     <section id="main">
@@ -74,7 +75,7 @@
         <script src="assets/js/bower_components/angular-smart-table/dist/smart-table.js"></script>
         <script src="assets/js/bower_components/chart.js/dist/Chart.js"></script>
         <script src="assets/js/bower_components/angular-chart.js/angular-chart.js"></script>
-        <script src="assets/js/bower_components/alasql/dist/alasql.js"></script>
+        <script src="assets/js/bower_components/lodash/dist/lodash.js"></script>
         <script src="assets/js/domo.js"></script>
     <!-- / -->
     <!-- endbuild -->
